--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.27.2",
     "express": "^4.17.2",
     "knex": "^2.1.0",
+    "nock": "^13.2.9",
     "pg": "^8.7.1",
     "sqlite3": "^5.0.8",
     "superagent": "7.1.1"
